@@ -1,7 +1,7 @@
-package com.stockmanagement.servlet;
+package servlet;
 
-import com.stockmanagement.dao.StockDAO;
-import com.stockmanagement.model.Stock;
+import dao.StockDAO;
+import model.Stock;
 import javax.servlet.ServletException;
 import javax.servlet.annotation.WebServlet;
 import javax.servlet.http.HttpServlet;
@@ -11,7 +11,6 @@ import java.io.IOException;
 import java.time.LocalDate;
 import java.time.format.DateTimeParseException;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @WebServlet("/stock")
 public class StockServlets extends HttpServlet {
@@ -45,7 +44,7 @@ public class StockServlets extends HttpServlet {
                         List<Stock> sortedProducts = allProducts.stream()
                                 .sorted(Comparator.comparing(Stock::getExpiryDate,
                                         Comparator.nullsLast(Comparator.naturalOrder())))
-                                .collect(Collectors.toList());
+                                .toList();
 
                         req.setAttribute("sortedProducts", sortedProducts);
                         req.setAttribute("total", sortedProducts.size());
